--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,7 +16,7 @@ html,body {
     line-height: 30px;
     outline:none;
     font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 24px;
     &:hover {
@@ -24,4 +24,22 @@ html,body {
         color: #fff;
         background-color: gray;
     }
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    width: 350px;
+}
+
+.title {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.description {
+    font-size: 18px;
+    padding: 20px 0 10px 0;
 }
